# radar_ego_motion_estimator

./: .gitignore  README.md
src/radar_ego_motion_estimation/: CMakeLists.txt  package.xml
src/radar_ego_motion_estimation/config/: radar_ego_motion_estimation.ini
src/radar_ego_motion_estimation/include/: main.hpp
src/radar_ego_motion_estimation/include/ini_handler_cpp/: c_ini.hpp
src/radar_ego_motion_estimation/include/radar_ego_velocity_estimator/: radar_ego_velocity_estimator.h  radar_point_cloud.h
src/radar_ego_motion_estimation/include/rio_utils/: radar_point_cloud.h
src/radar_ego_motion_estimation/launch/: radar_ego_motion_estimation.launch
src/radar_ego_motion_estimation/src/: main.cpp  radar_ego_velocity_estimator.cpp  radar_point_cloud.cpp
